Tailwind css installed

--- a/index.html
+++ b/index.html
@@ -4,9 +4,22 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./styles/style.css" />
-    <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
-
     <title>SendCrypt Web3</title>
   </head>
-  <body></body>
+  <body>
+    <!-- navbar Section  -->
+    <nav>
+      <div>
+        <div class="bg-primary">
+          <span>Send<span>Crypt</span></span>
+          <ul>
+            <li><a href="#">Markets</a></li>
+            <li><a href="#">Portfolio</a></li>
+            <li><a href="#">Products</a></li>
+          </ul>
+        </div>
+        <button type="button">Connect Wallet</button>
+      </div>
+    </nav>
+  </body>
 </html>
