--- a/index.html
+++ b/index.html
@@ -8,17 +8,47 @@
   </head>
   <body>
     <!-- navbar Section  -->
-    <nav>
-      <div>
-        <div class="bg-primary">
-          <span>Send<span>Crypt</span></span>
-          <ul>
-            <li><a href="#">Markets</a></li>
-            <li><a href="#">Portfolio</a></li>
-            <li><a href="#">Products</a></li>
-          </ul>
+    <nav class="bg-primary flex justify-center items-center">
+      <div class="container">
+        <div class="flex flex-row justify-between items-center h-max">
+          <div class="bg-primary flex flex-row gap-[46px]">
+            <span
+              class="font-[600] font-display text-[32px] text-nutral1 py-[28px]"
+              >Send<span class="text-secondary">Crypt</span>
+            </span>
+            <ul
+              class="flex flex-row text-nutral3 gap-[32px] items-center text-center font-display"
+            >
+              <li>
+                <a
+                  href="#"
+                  class="font-[400] font-display text-[16px] transition-all duration-500 ease-in-out hover:text-white"
+                  >Markets</a
+                >
+              </li>
+              <li>
+                <a
+                  href="#"
+                  class="font-[400] transition-all duration-500 ease-in-out font-display text-[16px] hover:text-white"
+                  >Portfolio</a
+                >
+              </li>
+              <li>
+                <a
+                  href="#"
+                  class="font-[400] transition-all duration-500 ease-in-out font-display text-[16px] hover:text-white"
+                  >Products</a
+                >
+              </li>
+            </ul>
+          </div>
+          <button
+            type="button"
+            class="text-[18px] font-medium font-display py-[16px] px-[32px] bg-secondary rounded-[12px] leading-[24px] cursor-pointer hover:bg-amber-400 transition-all duration-500 ease-in-out"
+          >
+            Connect Wallet
+          </button>
         </div>
-        <button type="button">Connect Wallet</button>
       </div>
     </nav>
   </body>
